--- a/getstarted.html
+++ b/getstarted.html
@@ -81,7 +81,7 @@
             <div class="row">
                     <div class="col-md-4">
                         <h4><em><strong>The Colliders</strong> </em></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor</p>
+                        <p>Looking forward and trying to make a change.</p>
                     </div>
 
                     <div class="col-md-4">
